configs/argocd/templates/cilium-health-checks.yaml
- apiVersion: "cilium.io/v2"
  kind: CiliumClusterwideNetworkPolicy
  metadata:
    name: "cilium-health-checks"
  spec:
    endpointSelector:
      matchLabels:
        "reserved:health": ""
    ingress:
      - fromEntities:
          - remote-node
    egress:
      - toEntities:
          - remote-node
