configs/argocd/templates/cluster-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-egress-to-cluster"
  labels:
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - "cluster"
